# ScanEdClient

./: .dockerignore  Cargo.toml  Dockerfile  README.md  index.html  run.py  test.http
html/: image_phase_page.html  index.html  master.html  model_page.html  photogrammetry_page.html  startup_page.html  template.html
src/: main.rs  photogrammetrie.rs  server_com.rs  txt.txt
src/photogrammetry/: image_handling.rs  mod.rs  paths.rs  photogrammetry.rs  zip.rs
src/web_interface/: app_state.rs  mod.rs  model.rs
stl_viewer/: readme.txt
